--- a/BarBot/iOS/Main.storyboard
+++ b/BarBot/iOS/Main.storyboard
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="17" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="17" translatesAutoresizingMaskIntoConstraints="NO">
                                 <rect key="frame" x="20" y="430" width="560" height="40"/>
                                 <state key="normal" title="Sign In">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -44,17 +44,44 @@
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="102" y="497" width="175" height="40"/>
                                 </variation>
+                                <constraints>
+                                    <constraint id="260" firstAttribute="height" constant="40"/>
+                                </constraints>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="18" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="100" y="505" width="400" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="18" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="20" y="505" width="560" height="40"/>
                                 <state key="normal" title="Register">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="100" y="572" width="175" height="40"/>
                                 </variation>
+                                <constraints>
+                                    <constraint id="264" firstAttribute="height" constant="40"/>
+                                </constraints>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="BarBot" lineBreakMode="tailTruncation" minimumFontSize="10" id="271" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center">
+                                <rect key="frame" x="20" y="99" width="560" height="68"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" colorSpace="calibratedRGB" red="0.015686274509803921" green="0.29411764705882354" blue="0.60392156862745094" alpha="1"/>
+                                <nil key="highlightedColor"/>
+                                <constraints>
+                                    <constraint id="275" firstAttribute="height" constant="68"/>
+                                </constraints>
+                            </label>
                         </subviews>
+                        <constraints>
+                            <constraint id="257" firstItem="13" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" constant="20"/>
+                            <constraint id="258" firstItem="13" firstAttribute="bottom" secondItem="17" secondAttribute="bottom" constant="130"/>
+                            <constraint id="261" firstItem="13" firstAttribute="trailing" secondItem="18" secondAttribute="trailing" constant="20"/>
+                            <constraint id="262" firstItem="13" firstAttribute="bottom" secondItem="18" secondAttribute="bottom" constant="55"/>
+                            <constraint id="267" firstItem="17" firstAttribute="centerX" secondItem="13" secondAttribute="centerX"/>
+                            <constraint id="268" firstItem="18" firstAttribute="centerX" secondItem="13" secondAttribute="centerX"/>
+                            <constraint id="287" firstItem="13" firstAttribute="trailing" secondItem="271" secondAttribute="trailing" constant="20"/>
+                            <constraint id="290" firstItem="271" firstAttribute="centerX" secondItem="13" secondAttribute="centerX"/>
+                            <constraint id="297" firstItem="271" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="35"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="SignInButton" destination="17" id="name-outlet-17"/>
@@ -67,7 +94,7 @@
         </scene>
         <scene sceneID="143">
             <objects>
-                <viewController id="144" sceneMemberID="viewController" customClass="SignInViewController">
+                <viewController id="144" sceneMemberID="viewController" customClass="SignInViewController" storyboardIdentifier="SignInViewController" useStoryboardIdentifierAsRestorationIdentifier="YES">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="141"/>
                         <viewControllerLayoutGuide type="bottom" id="142"/>
@@ -76,7 +103,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="251" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="100" y="125" width="100" height="30"/>
+                                <state key="normal" title="Facebook">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="FacebookButton_TouchUpInside:" destination="144" id="255" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="253" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="417" y="125" width="100" height="30"/>
+                                <state key="normal" title="Google">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="GoogleButton_TouchUpInside:" destination="144" id="256" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                        </subviews>
                     </view>
+                    <navigationItem id="250" key="navigationItem" title="Sign In"/>
+                    <connections>
+                        <outlet property="FacebookButton" destination="251" id="name-outlet-251"/>
+                        <outlet property="GoogleButton" destination="253" id="name-outlet-253"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="146" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
