--- a/BarBot/iOS/Main.storyboard
+++ b/BarBot/iOS/Main.storyboard
@@ -33,9 +33,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="17" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="20" y="430" width="560" height="40"/>
+                                <rect key="frame" x="30" y="440" width="540" height="50"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="0.031372549019607843" green="0.21176470588235294" blue="0.52941176470588236" alpha="1"/>
                                 <state key="normal" title="Sign In">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
                                 </state>
                                 <connections>
                                     <segue id="232" destination="144" kind="show"/>
@@ -45,23 +46,25 @@
                                     <rect key="frame" x="102" y="497" width="175" height="40"/>
                                 </variation>
                                 <constraints>
-                                    <constraint id="260" firstAttribute="height" constant="40"/>
+                                    <constraint id="260" firstAttribute="height" constant="50"/>
                                 </constraints>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="18" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="20" y="505" width="560" height="40"/>
+                                <rect key="frame" x="30" y="520" width="540" height="50"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="0.031372549019607843" green="0.21176470588235294" blue="0.52941176470588236" alpha="1"/>
                                 <state key="normal" title="Register">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
                                 </state>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="100" y="572" width="175" height="40"/>
                                 </variation>
                                 <constraints>
-                                    <constraint id="264" firstAttribute="height" constant="40"/>
+                                    <constraint id="264" firstAttribute="height" constant="50"/>
                                 </constraints>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="BarBot" lineBreakMode="tailTruncation" minimumFontSize="10" id="271" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center">
-                                <rect key="frame" x="20" y="99" width="560" height="68"/>
+                                <rect key="frame" x="30" y="94" width="540" height="68"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <color key="textColor" colorSpace="calibratedRGB" red="0.015686274509803921" green="0.29411764705882354" blue="0.60392156862745094" alpha="1"/>
@@ -72,15 +75,18 @@
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint id="257" firstItem="13" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" constant="20"/>
-                            <constraint id="258" firstItem="13" firstAttribute="bottom" secondItem="17" secondAttribute="bottom" constant="130"/>
-                            <constraint id="261" firstItem="13" firstAttribute="trailing" secondItem="18" secondAttribute="trailing" constant="20"/>
-                            <constraint id="262" firstItem="13" firstAttribute="bottom" secondItem="18" secondAttribute="bottom" constant="55"/>
+                            <constraint id="257" firstItem="13" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" constant="30"/>
+                            <constraint id="261" firstItem="13" firstAttribute="trailing" secondItem="18" secondAttribute="trailing" constant="30"/>
                             <constraint id="267" firstItem="17" firstAttribute="centerX" secondItem="13" secondAttribute="centerX"/>
                             <constraint id="268" firstItem="18" firstAttribute="centerX" secondItem="13" secondAttribute="centerX"/>
-                            <constraint id="287" firstItem="13" firstAttribute="trailing" secondItem="271" secondAttribute="trailing" constant="20"/>
+                            <constraint id="287" firstItem="13" firstAttribute="trailing" secondItem="271" secondAttribute="trailing" constant="30"/>
                             <constraint id="290" firstItem="271" firstAttribute="centerX" secondItem="13" secondAttribute="centerX"/>
-                            <constraint id="297" firstItem="271" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="35"/>
+                            <constraint id="297" firstItem="271" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="30"/>
+                            <constraint id="312" firstItem="18" firstAttribute="top" secondItem="17" secondAttribute="bottom" constant="30"/>
+                            <constraint id="313" firstItem="4" firstAttribute="top" secondItem="18" secondAttribute="bottom" constant="30"/>
+                            <constraint id="314" firstItem="18" firstAttribute="leading" secondItem="13" secondAttribute="leading" constant="30"/>
+                            <constraint id="315" firstItem="17" firstAttribute="leading" secondItem="13" secondAttribute="leading" constant="30"/>
+                            <constraint id="320" firstItem="271" firstAttribute="leading" secondItem="13" secondAttribute="leading" constant="30"/>
                         </constraints>
                     </view>
                     <connections>
@@ -135,4 +141,5 @@
             <point key="canvasLocation" x="1060" y="19"/>
         </scene>
     </scenes>
+    <color key="tintColor" colorSpace="calibratedRGB" red="0.031372549019607843" green="0.21176470588235294" blue="0.52941176470588236" alpha="1"/>
 </document>
