--- a/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="BarBot.UserControls.Uc_Menu"
+    x:Class="BarBot.UWP.UserControls.Uc_Menu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UserControls"
+    xmlns:local="using:BarBot.UWP.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
