--- a/BarBot/BarBot.UWP/MainPage.xaml
+++ b/BarBot/BarBot.UWP/MainPage.xaml
@@ -7,11 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,-252,0">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBox x:Name="HelloMessage" Text="Hello, BarBot!" Margin="10" IsReadOnly="True"/>
-            <Button x:Name="Button" Content="Fuck My Shit Up Fam"  Margin="10" HorizontalAlignment="Center" Click="Button_Click"/>
-        </StackPanel>
+    <Grid Background="#FF131313" Margin="0,0,-252,0">
         <Frame Name="ContentFrame"></Frame>
     </Grid>
 </Page>
