--- a/BarBot/BarBot.UWP/MainPage.xaml
+++ b/BarBot/BarBot.UWP/MainPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="#FF131313" Margin="0,0,-252,0">
+    <Grid Background="#FF131313">
         <Frame Name="ContentFrame"></Frame>
     </Grid>
 </Page>
