--- a/BarBot/BarBot.UWP/UserControls/Uc_RecipeTile.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_RecipeTile.xaml
@@ -6,19 +6,18 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="100"
-    d:DesignWidth="100"
-    MinWidth="{Binding ActualHeight, RelativeSource={RelativeSource Self}}"
-    MinHeight="{Binding ActualWidth, RelativeSource={RelativeSource Self}}">
-    
-    <Grid BorderThickness="1" BorderBrush="#FF383838">
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="1"/>
-                <GradientStop Color="#FF212121"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-        <TextBlock Name="tb_RecipeName" Text="{Binding Path=Recipe.Name}" Foreground="#FFA6A6A6"></TextBlock>
-        <Image Name="img_RecipeImage" Source="{Binding Path=Recipe.Img}"></Image>
-    </Grid>
+    d:DesignWidth="200"
+    d:DesignHeight="200">
+
+    <Canvas>
+        <Grid Canvas.Top="75" Canvas.Left="25" Width="150" Background="#33000000" Canvas.ZIndex="99">
+            <TextBlock Text="{Binding Path=Recipe.Name}" FontFamily="Microsoft Yi Baiti" FontSize="24" Typography.Capitals="AllSmallCaps" Foreground="#FFE6E1E1" Canvas.ZIndex="99" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        </Grid>
+        <Path x:Name="hexagon" Stroke="#FF222222" StrokeThickness="5" Height="170" Width="200" 
+                  Loaded="hexagon_Loaded">
+            <Path.Fill>
+                <ImageBrush Stretch="Fill" ImageSource="{Binding Path=Recipe.Img}"/>
+            </Path.Fill>
+        </Path>
+    </Canvas>
 </UserControl>
