--- a/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
@@ -9,10 +9,16 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Margin="30" Height="1080" Width="1920">
+    <Grid Height="1080" Width="1920">
+        <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
+            <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
+        </Border>
+        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="DRINK MENU" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="0,10,0,0"/>
         <Button Click="Button_Click">Reload</Button>
         <Canvas Name="recipeTileCanvas" Height="880" Width="1550" HorizontalAlignment="Center" VerticalAlignment="Center">
-            
+
         </Canvas>
+
+
     </Grid>
 </UserControl>
