--- a/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
@@ -15,7 +15,7 @@
         </Border>
         <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="DRINK MENU" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="0,10,0,0"/>
         <Button Click="Button_Click">Reload</Button>
-        <Canvas Name="recipeTileCanvas" Height="880" Width="1550" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Canvas Name="recipeTileCanvas" Height="970" Width="1550" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="185,100,185,10">
 
         </Canvas>
 
