Updated party mode page to use hexagon images, and open drink menu on click - Added hexagon images to assets folder - Added comments to ble publisher

--- a/BarBot/BarBot.UWP/MainPage.xaml
+++ b/BarBot/BarBot.UWP/MainPage.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="#FF131313">
-        <Frame Name="ContentFrame"></Frame>
+        <Frame Name="ContentFrame" x:FieldModifier="public"></Frame>
     </Grid>
 </Page>
