--- a/BarBot/Barbot.UWP/UserControls/Uc_DrinkDetail.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_DrinkDetail.xaml
@@ -16,11 +16,15 @@
         <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
             <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
         </Border>
-        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="30" Width="100" Content="Back" Click="Back_To_Menu">
-
+        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Click="Back_To_Menu" Margin="0,30,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Image Source="ms-appx:///Assets/back_arrow.png"/>
+                </ControlTemplate>
+            </Button.Template>
         </Button>
-        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="{Binding Path=Recipe.Name, Converter={StaticResource ToUpperConverter}}" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="0,10,0,0"/>
+        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Canvas.Left="50" Height="67" TextWrapping="Wrap" Text="{Binding Path=Recipe.Name, Converter={StaticResource ToUpperConverter}}" VerticalAlignment="Top" Width="942" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,10,0,0"/>
 
-
+        <Image x:Name="RecipeImage" Width="390" Height="330" Stretch="Uniform" Source="{Binding Path=Recipe.Img}" Margin="53,157,1477,593" />
     </Grid>
 </UserControl>
