--- a/BarBot/BarBot.UWP/UserControls/Uc_OrderQueue.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_OrderQueue.xaml
@@ -6,23 +6,28 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignHeight="1080"
+    d:DesignWidth="1920">
 
-    <Grid Margin="0,0,0,10">
-        <GridView x:Name="gridView" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" ItemsSource="{x:Bind DrinkOrders}" IsItemClickEnabled="True">
+    <Grid>
+         <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
+            <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
+        </Border>
+        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="ORDER QUEUE" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="0,10,0,0"/>
+
+        <GridView x:Name="gridView" ItemsSource="{x:Bind DrinkOrders}" IsItemClickEnabled="True" Height="970" Width="1920" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,10">
             <GridView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <ItemsWrapGrid Orientation="Horizontal"></ItemsWrapGrid>
+                    <ItemsWrapGrid Orientation="Vertical"></ItemsWrapGrid>
                 </ItemsPanelTemplate>
             </GridView.ItemsPanel>
             <GridView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid Width="1920">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100"></ColumnDefinition>
-                            <ColumnDefinition Width="100"></ColumnDefinition>
-                            <ColumnDefinition Width="100"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Grid.Column="0" Text="{Binding recipeName}" Foreground="White"></TextBlock>
